# holdview

./: .gitignore  LEARNINGS.md  NEETCODE.md  VOCAB.md
ADR/: ADR-002  ADR-003
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18d0fdf91d1f_add_price_and_mkt_value_to_holdings.py  2de9dc689429_add_password_hash_and_created_at_to_.py  3462a88074f1_add_portfolios_and_holdings_tables.py  68fa5cbc9b3f_add_statements_table.py  a2d7a5511487_create_users_table.py  fd6e8b0d5b54_add_error_message_to_statements.py
backend/app/: main.py
backend/app/core/: security.py
backend/app/db/: database.py
backend/app/models/: holding.py  portfolio.py  statement.py  user.py
backend/app/schemas/: analysis.py  auth.py  holding.py  portfolio.py  statement.py  user.py
backend/app/services/parsers/: robinhood.py  types.py
backend/scratch/: inspect_pdf.py  test_parser.py
frontend/src/: App.tsx  HoldingsList.tsx  LoginPage.tsx  PortfolioList.tsx  api.ts
