[project]
name = "holdview-backend"
version = "0.1.0"
description = "Backend API for Holdview"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]
